    behavior in the google authenticator url.
  * Token monitoring now better sanitizes the status parameter
  * Improved Manage-UI error message if something fails in the initial config
    load phase.
  * sqlite can be used as audit database - the response of audit/search
    now skips streaming the response data for sqlite audit databases.

  Breaking changes:
  * No longer support AUDIT_POOL_RECYCLE configuration setting.
  * Sqlite audit databases can no longer share the same file with LinOTP. If configured
    to share the same file, LinOTP will add a suffix to the audit database file name.

  Fixes:
  * mOTP tokens can now be used in challenge response mode
  * Adjust yubico token config text to make it clear that a dedicated
    API key from yubico is required.
  * An error message is now shown in the Manage UI if a token import fails
  * API /admin/testconnection accepts only the name of an existing resolver as
    parameter. Other parameters are ignored. This fixes the ability to submit
    unauthorized ldap connection requests.
  * Manage-UI no longer hangs on failed resolver save requests.
  * Token monitoring now correctly counts tokens that are assigned to multiple realms
    only once in mysql and sqlite databases.
  * Dynamic user data (e.g. e-mail addresses and phone numbers) are always
    refreshed during resolver lookups triggered by the authentication workflow.
    The policies sms_dynamic_mobile_number, dynamic_email_address, and
    voice_dynamic_mobile_number therefore directly reflect external user data
    changes.
  * Remove references to the deactivated newsletter and former company names
  * Legacy Selfservice now correctly recognizes type=yubikey tokens in MFA login. 
  * Manage-UI no longer gets stuck in the interface initializtaion if the logged
    in user is missing required admin permissions. Now, it is guaranteed that a
    logout is always possible.
  * support the assignment of multiple tokens within one request to